tmp/funnel-output_path-6ZQcCHC6.tmp/gyak09/tests/unit/pods/errors/edit/route-test.jshint.js
/home/ubuntu/workspace/hibabejelento/tmp/jshinter-output_path-x5T83SYR.tmp/unit/pods/errors/edit/route-test.jshint.js